--- a/mop/Pages/ClientsPage.xaml
+++ b/mop/Pages/ClientsPage.xaml
@@ -5,7 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:mop.Pages"
       mc:Ignorable="d" 
-      d:DesignHeight="1080" d:DesignWidth="1920"
+      d:DesignHeight="900" d:DesignWidth="1450"
       Title="ClientsPage">
 
     <Grid Background="White">
@@ -13,7 +13,7 @@
         <Button Content="← назад"
                     FontSize="34"
                     FontWeight="Bold"
-                    Width="200"
+                    Width="200" Height="100"
                     Background="Transparent"
                     BorderThickness="0" 
                     x:Name="BackBtn" Click="BackBtn_Click" Margin="65,10,1015,602">
@@ -28,10 +28,10 @@
 
         <Image Source="/Images/Vector.png"
                Width="800"
-                   Margin="1269,0,-149,306"/>
+                   Margin="856,0,-206,306"/>
         <Image Source="/Images/Vector.png"
                Width="800"
-                   Margin="-130,353,1250,-47" RenderTransformOrigin="0.5,0.5">
+                   Margin="-214,323,864,-17" RenderTransformOrigin="0.5,0.5">
             <Image.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -56,7 +56,7 @@
                     </LinearGradientBrush>
                 </TextBlock.Foreground>
             </TextBlock>
-            <ListView x:Name="employeesLv" 
+            <ListView x:Name="clientsLv" 
                     Width="1200" Height="400"
                     FontSize="20"
                     ItemsSource="{Binding clients}"
