--- a/mop/Pages/addingPages/ServicesAddPage.xaml
+++ b/mop/Pages/addingPages/ServicesAddPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="mop.Pages.addingPages.AddressesAddPage"
+﻿<Page x:Class="mop.Pages.addingPages.ServicesAddPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,13 +6,10 @@
       xmlns:local="clr-namespace:mop.Pages.addingPages"
       mc:Ignorable="d" 
       d:DesignHeight="900" d:DesignWidth="1450"
-      Title="AddressesAddPage">
+      Title="ServicesAddPage">
 
     <Grid Background="White">
         <Grid.RowDefinitions>
-            <RowDefinition/>
-            <RowDefinition/>
-            <RowDefinition/>
             <RowDefinition/>
             <RowDefinition/>
             <RowDefinition/>
@@ -25,13 +22,14 @@
         </Grid.ColumnDefinitions>
 
         <Button Content="← назад"
-                FontSize="34" Height="100"
+                FontSize="34"
                 FontWeight="Bold"
-                Width="200"
+                Width="200" Height="100"
                 Background="Transparent"
                 BorderThickness="0" 
                 x:Name="BackBtn" 
-                Click="BackBtn_Click">
+                Click="BackBtn_Click"
+                Grid.RowSpan="2">
             <Button.Foreground>
                 <LinearGradientBrush>
                     <GradientStop Color="#C0D5B3" Offset="0"/>
@@ -49,7 +47,7 @@
            VerticalAlignment="Bottom"
            HorizontalAlignment="Left"
            RenderTransformOrigin="0.5,0.5" 
-           Grid.RowSpan="4" Grid.Row="3">
+           Grid.RowSpan="4" Grid.Row="2">
             <Image.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -59,8 +57,8 @@
                 </TransformGroup>
             </Image.RenderTransform>
         </Image>
-        <TextBlock Text="добавить объект"
-               FontSize="50" 
+        <TextBlock Text="добавить услугу"
+               FontSize="55" 
                FontWeight="Bold"
                VerticalAlignment="Center"
                HorizontalAlignment="Center"
@@ -75,13 +73,16 @@
             </TextBlock.Foreground>
         </TextBlock>
 
-        <TextBlock Text="клиент" 
-                    FontSize="35" 
-                    FontWeight="Bold"
-                    HorizontalAlignment="Center" 
-                    VerticalAlignment="Center" 
-                    Grid.RowSpan="2" Grid.ColumnSpan="2" 
-                    Grid.Row="1">
+
+
+        <TextBlock Text="название" 
+               TextWrapping="Wrap"
+               FontSize="35"  
+               FontWeight="Bold"
+               HorizontalAlignment="Center" 
+               VerticalAlignment="Center" 
+               Grid.RowSpan="2" Grid.ColumnSpan="2" 
+               Grid.Row="1">
             <TextBlock.Foreground>
                 <LinearGradientBrush>
                     <GradientStop Color="#C0D5B3" Offset="0"/>
@@ -90,43 +91,43 @@
                 </LinearGradientBrush>
             </TextBlock.Foreground>
         </TextBlock>
-        <ComboBox Grid.RowSpan="2" Grid.ColumnSpan="2" 
-              Grid.Row="1" Grid.Column="1"
-              x:Name="clientsCb" FontSize="30"
-              Width="350" Height="60" FontWeight="Bold"
-              ItemsSource="{Binding clients}">
-            <ComboBox.Foreground>
+        <Border BorderThickness="4"
+                CornerRadius="26"
+                HorizontalAlignment="Center" 
+                VerticalAlignment="Center" 
+                Grid.RowSpan="2" Grid.ColumnSpan="2" 
+                Grid.Row="1" Grid.Column="1"
+                Height="60" Width="250">
+            <Border.BorderBrush>
                 <LinearGradientBrush>
                     <GradientStop Color="#C0D5B3" Offset="0"/>
                     <GradientStop Color="#B3C9D5" Offset="0.5"/>
                     <GradientStop Color="#A3AEE6" Offset="1"/>
                 </LinearGradientBrush>
-            </ComboBox.Foreground>
-            <ComboBox.ItemTemplate>
-                <DataTemplate>
-                    <StackPanel Orientation="Horizontal">
-                        <TextBlock Text="{Binding Name}"/>
-                        <TextBlock Text=" "/>
+            </Border.BorderBrush>
+            <TextBox Background="Transparent"
+                 FontSize="35" 
+                 Height="50" 
+                 BorderThickness="0"
+                 Padding="15 0 0 0"
+                 x:Name="nameTb">
 
-                        <TextBlock Text="{Binding Surname}"/>
-                        <TextBlock Text=" "/>
+                <TextBlock.Foreground>
+                    <LinearGradientBrush>
+                        <GradientStop Color="#C0D5B3" Offset="0"/>
+                        <GradientStop Color="#B3C9D5" Offset="0.5"/>
+                        <GradientStop Color="#A3AEE6" Offset="1"/>
+                    </LinearGradientBrush>
+                </TextBlock.Foreground>
+            </TextBox>
+        </Border>
 
-                        <TextBlock Text="{Binding Patronymic}"/>
-
-
-                    </StackPanel>
-                </DataTemplate>
-            </ComboBox.ItemTemplate>
-        </ComboBox>
-
-
-        <TextBlock Text="улица" 
-               TextWrapping="Wrap"
-               FontSize="35"  
+        <TextBlock Text="описание" 
+              FontSize="35" 
                FontWeight="Bold"
                HorizontalAlignment="Center" 
                VerticalAlignment="Center" 
-               Grid.RowSpan="2" Grid.ColumnSpan="2" 
+               Grid.RowSpan="1" Grid.ColumnSpan="2" 
                Grid.Row="2">
             <TextBlock.Foreground>
                 <LinearGradientBrush>
@@ -138,8 +139,8 @@
         </TextBlock>
         <Border BorderThickness="4"
                 CornerRadius="26"
-                Grid.RowSpan="2" Grid.ColumnSpan="2" 
-                Grid.Row="2" Grid.Column="1"
+                 Grid.RowSpan="1" Grid.ColumnSpan="2" 
+                 Grid.Row="2" Grid.Column="1"
                 Height="60" Width="250">
             <Border.BorderBrush>
                 <LinearGradientBrush>
@@ -150,10 +151,10 @@
             </Border.BorderBrush>
             <TextBox Background="Transparent"
                  FontSize="35" 
-                 Height="60" 
+                 Height="50"
                  BorderThickness="0"
                  Padding="15 0 0 0"
-                 x:Name="streetTb">
+                 x:Name="descriptionTb" >
 
                 <TextBlock.Foreground>
                     <LinearGradientBrush>
@@ -165,57 +166,13 @@
             </TextBox>
         </Border>
 
-        <TextBlock Text="дом" 
-              FontSize="35" 
-               FontWeight="Bold"
-               HorizontalAlignment="Center" 
-               VerticalAlignment="Center" 
-               Grid.RowSpan="2" Grid.ColumnSpan="2" 
-               Grid.Row="3">
-            <TextBlock.Foreground>
-                <LinearGradientBrush>
-                    <GradientStop Color="#C0D5B3" Offset="0"/>
-                    <GradientStop Color="#B3C9D5" Offset="0.5"/>
-                    <GradientStop Color="#A3AEE6" Offset="1"/>
-                </LinearGradientBrush>
-            </TextBlock.Foreground>
-        </TextBlock>
-        <Border BorderThickness="4"
-                CornerRadius="26"
-                Grid.RowSpan="2" Grid.ColumnSpan="2" 
-                Grid.Row="3" Grid.Column="1"
-                Height="60" Width="250">
-            <Border.BorderBrush>
-                <LinearGradientBrush>
-                    <GradientStop Color="#C0D5B3" Offset="0"/>
-                    <GradientStop Color="#B3C9D5" Offset="0.5"/>
-                    <GradientStop Color="#A3AEE6" Offset="1"/>
-                </LinearGradientBrush>
-            </Border.BorderBrush>
-            <TextBox Background="Transparent"
-                 FontSize="35" 
-                 Height="60"
-                 BorderThickness="0"
-                 Padding="15 0 0 0"
-                 x:Name="houseTb" >
-
-                <TextBlock.Foreground>
-                    <LinearGradientBrush>
-                        <GradientStop Color="#C0D5B3" Offset="0"/>
-                        <GradientStop Color="#B3C9D5" Offset="0.5"/>
-                        <GradientStop Color="#A3AEE6" Offset="1"/>
-                    </LinearGradientBrush>
-                </TextBlock.Foreground>
-            </TextBox>
-        </Border>
-
-        <TextBlock Text="кв/офис" 
+        <TextBlock Text="цена" 
       FontSize="35" 
        FontWeight="Bold"
        HorizontalAlignment="Center" 
        VerticalAlignment="Center" 
        Grid.RowSpan="2" Grid.ColumnSpan="2" 
-       Grid.Row="4">
+       Grid.Row="2">
             <TextBlock.Foreground>
                 <LinearGradientBrush>
                     <GradientStop Color="#C0D5B3" Offset="0"/>
@@ -225,9 +182,8 @@
             </TextBlock.Foreground>
         </TextBlock>
         <Border BorderThickness="4"
-        CornerRadius="26"
-        Grid.RowSpan="2" Grid.ColumnSpan="2" 
-        Grid.Row="4" Grid.Column="1"
+        CornerRadius="26" Grid.RowSpan="2" Grid.ColumnSpan="2" 
+ Grid.Row="2" Grid.Column="1"
         Height="60" Width="250">
             <Border.BorderBrush>
                 <LinearGradientBrush>
@@ -238,10 +194,10 @@
             </Border.BorderBrush>
             <TextBox Background="Transparent"
          FontSize="35" 
-         Height="50"
+         Height="60"
          BorderThickness="0"
          Padding="15 0 0 0"
-         x:Name="roomTb" >
+         x:Name="priceTb" >
 
                 <TextBlock.Foreground>
                     <LinearGradientBrush>
@@ -255,7 +211,7 @@
 
         <Border CornerRadius="26" Height="60" Width="250"
             Grid.Column="1"
-            Grid.Row="8">
+            Grid.Row="3">
             <Border.Background>
                 <LinearGradientBrush>
                     <GradientStop Color="#C0D5B3" Offset="0"/>
