--- a/mop/Pages/editingPages/EditOrderPage.xaml
+++ b/mop/Pages/editingPages/EditOrderPage.xaml
@@ -23,16 +23,15 @@
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
 
+
         <Button Content="← назад"
                 FontSize="34"
                 FontWeight="Bold"
-                Width="200"
+                Width="200" Height="100"
                 Background="Transparent"
                 BorderThickness="0" 
                 x:Name="BackBtn" 
-                Click="BackBtn_Click"
-                Grid.ColumnSpan="2"
-                Grid.RowSpan="2">
+                Click="BackBtn_Click">
             <Button.Foreground>
                 <LinearGradientBrush>
                     <GradientStop Color="#C0D5B3" Offset="0"/>
@@ -60,8 +59,8 @@
                 </TransformGroup>
             </Image.RenderTransform>
         </Image>
-        <TextBlock Text="редактировать заказ"
-               FontSize="35" 
+        <TextBlock Text="оформить заказ"
+               FontSize="55" 
                FontWeight="Bold"
                VerticalAlignment="Center"
                HorizontalAlignment="Center"
@@ -77,7 +76,7 @@
         </TextBlock>
 
         <TextBlock Text="клиент" 
-                    FontSize="25"
+                    FontSize="35"
                     FontWeight="Bold"
                     HorizontalAlignment="Center" 
                     VerticalAlignment="Center" 
@@ -93,8 +92,8 @@
         </TextBlock>
         <ComboBox Grid.RowSpan="2" Grid.ColumnSpan="2" 
               Grid.Row="1" Grid.Column="1"
-              x:Name="clientsCb"
-              Width="250" Height="40" FontWeight="Bold"
+              x:Name="clientsCb" FontSize="30"
+              Width="350" Height="60" FontWeight="Bold"
               ItemsSource="{Binding clients}">
             <ComboBox.Foreground>
                 <LinearGradientBrush>
@@ -106,21 +105,22 @@
             <ComboBox.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Orientation="Horizontal">
-                    <TextBlock Text="{Binding Name}"/>
-                    <TextBlock Text=" "/>
-               
-                    <TextBlock Text="{Binding Surname}"/>
-                    <TextBlock Text=" "/>
-               
-                    <TextBlock Text="{Binding Patronymic}"/>
-               
-                        
-                    </StackPanel> </DataTemplate>
+                        <TextBlock Text="{Binding Name}"/>
+                        <TextBlock Text=" "/>
+
+                        <TextBlock Text="{Binding Surname}"/>
+                        <TextBlock Text=" "/>
+
+                        <TextBlock Text="{Binding Patronymic}"/>
+
+
+                    </StackPanel>
+                </DataTemplate>
             </ComboBox.ItemTemplate>
         </ComboBox>
 
         <TextBlock Text="бригада" 
-                    FontSize="25"
+                    FontSize="35"
                     FontWeight="Bold"
                     HorizontalAlignment="Center" 
                     VerticalAlignment="Center" 
@@ -136,8 +136,8 @@
         </TextBlock>
         <ComboBox Grid.RowSpan="1" Grid.ColumnSpan="2" 
                   Grid.Row="2" Grid.Column="1"
-                  x:Name="brigadesCb"
-                  Width="250" Height="40" FontWeight="Bold"
+                  x:Name="brigadesCb" FontSize="30"
+                  Width="350" Height="60" FontWeight="Bold"
                   ItemsSource="{Binding brigades}">
             <ComboBox.Foreground>
                 <LinearGradientBrush>
@@ -154,7 +154,7 @@
         </ComboBox>
 
         <TextBlock Text="услуга" 
-                    FontSize="25"
+                    FontSize="35"
                     FontWeight="Bold"
                     HorizontalAlignment="Center" 
                     VerticalAlignment="Center" 
@@ -170,8 +170,8 @@
         </TextBlock>
         <ComboBox Grid.RowSpan="2" Grid.ColumnSpan="2" 
               Grid.Row="2" Grid.Column="1"
-              x:Name="servicesCb"
-              Width="250" Height="40" FontWeight="Bold"
+              x:Name="servicesCb" FontSize="30"
+              Width="350" Height="60" FontWeight="Bold"
               ItemsSource="{Binding services}" SelectionChanged="servicesCb_SelectionChanged">
             <ComboBox.Foreground>
                 <LinearGradientBrush>
@@ -189,7 +189,7 @@
 
         <TextBlock Text="цена" 
                TextWrapping="Wrap"
-               FontSize="25" 
+               FontSize="35" 
                FontWeight="Bold"
                HorizontalAlignment="Center" 
                VerticalAlignment="Center" 
@@ -207,7 +207,7 @@
                 CornerRadius="26"
                 Grid.RowSpan="1" Grid.ColumnSpan="2" 
                 Grid.Row="3" Grid.Column="1"
-                Height="40" Width="250">
+                Height="60" Width="250">
             <Border.BorderBrush>
                 <LinearGradientBrush>
                     <GradientStop Color="#C0D5B3" Offset="0"/>
@@ -216,8 +216,8 @@
                 </LinearGradientBrush>
             </Border.BorderBrush>
             <TextBox Background="Transparent"
-                 FontSize="25"
-                 Height="40" Text="{Binding Price}"
+                 FontSize="35"
+                 Height="50" 
                  BorderThickness="0"
                  Padding="15 0 0 0"
                  x:Name="priceTb">
@@ -231,14 +231,14 @@
                 </TextBlock.Foreground>
             </TextBox>
         </Border>
-        
+
         <TextBlock Text="площадь/кол-во" 
-              FontSize="25"
-               FontWeight="Bold"
-               HorizontalAlignment="Center" 
-               VerticalAlignment="Center" 
-               Grid.RowSpan="2" Grid.ColumnSpan="2" 
-               Grid.Row="3">
+                   FontSize="35"
+                   FontWeight="Bold"
+                   HorizontalAlignment="Center" 
+                   VerticalAlignment="Center" 
+                   Grid.RowSpan="2" Grid.ColumnSpan="2" 
+                   Grid.Row="3">
             <TextBlock.Foreground>
                 <LinearGradientBrush>
                     <GradientStop Color="#C0D5B3" Offset="0"/>
@@ -248,10 +248,10 @@
             </TextBlock.Foreground>
         </TextBlock>
         <Border BorderThickness="4"
-                CornerRadius="26"
+                CornerRadius="26" 
                 Grid.RowSpan="2" Grid.ColumnSpan="2" 
                 Grid.Row="3" Grid.Column="1"
-                Height="37" Width="250">
+                Height="60" Width="250">
             <Border.BorderBrush>
                 <LinearGradientBrush>
                     <GradientStop Color="#C0D5B3" Offset="0"/>
@@ -260,11 +260,11 @@
                 </LinearGradientBrush>
             </Border.BorderBrush>
             <TextBox Background="Transparent"
-                 FontSize="25"
-                 Height="40"
-                 BorderThickness="0"
-                 Padding="15 0 0 0"
-                 x:Name="squareTb" TextChanged="squareTb_TextChanged">
+                    FontSize="35"
+                    Height="50"
+                    BorderThickness="0"
+                    Padding="15 0 0 0"
+                    x:Name="squareTb" TextChanged="squareTb_TextChanged">
 
                 <TextBlock.Foreground>
                     <LinearGradientBrush>
@@ -275,9 +275,9 @@
                 </TextBlock.Foreground>
             </TextBox>
         </Border>
-        
+
         <TextBlock Text="дата" 
-      FontSize="25"
+      FontSize="35"
        FontWeight="Bold"
        HorizontalAlignment="Center" 
        VerticalAlignment="Center" 
@@ -292,8 +292,8 @@
             </TextBlock.Foreground>
         </TextBlock>
         <DatePicker x:Name="dateDp"
-                    Width="200"
-                    Height="40"
+                    Width="250"
+                    Height="60" FontSize="35"
                     Grid.RowSpan="1" 
                     Grid.ColumnSpan="2" 
                     Grid.Column="1"
@@ -306,8 +306,8 @@
                 </LinearGradientBrush>
             </DatePicker.Foreground>
         </DatePicker>
-        
-        <Border CornerRadius="26" Height="35" Width="150"
+
+        <Border CornerRadius="26" Height="60" Width="250"
             Grid.Column="1"
             Grid.Row="8">
             <Border.Background>
@@ -318,12 +318,14 @@
                 </LinearGradientBrush>
             </Border.Background>
             <Button Content="добавить"
-                FontSize="25"
+                FontSize="45"
                 FontWeight="Bold"
                 Foreground="White"
                 Background="Transparent"
                 BorderThickness="0" 
-                x:Name="SaveBtn" Click="SaveBtn_Click" Height="35" VerticalAlignment="Top"/>
+                x:Name="SaveBtn" Width="250"
+                    Click="SaveBtn_Click" Height="60" 
+                    VerticalAlignment="Top"/>
         </Border>
 
     </Grid>
