--- a/mop/Pages/MenuSecondPage.xaml
+++ b/mop/Pages/MenuSecondPage.xaml
@@ -25,7 +25,7 @@
                 </TextBlock.Foreground>
             </TextBlock>
             <Border CornerRadius="26" Width="200"
-                    Margin="0 10">
+                    Margin="0 10" x:Name="profileBr">
                 <Border.Background>
                     <LinearGradientBrush>
                         <GradientStop Color="#C0D5B3" Offset="0"/>
