--- a/mop/Pages/EmployeesPage.xaml
+++ b/mop/Pages/EmployeesPage.xaml
@@ -5,16 +5,17 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:mop.Pages"
       mc:Ignorable="d" 
-      d:DesignHeight="1080" d:DesignWidth="1920"
+      d:DesignHeight="900" d:DesignWidth="1450"
       Title="EmployeesPage">
 
     <Grid Background="White">
+
         <Image Source="/Images/Vector.png"
-               Width="800"
-               Margin="1269,0,-149,306"/>
+                   Width="800"
+                       Margin="889,0,-239,306"/>
         <Image Source="/Images/Vector.png"
-               Width="800"
-               Margin="-130,353,1250,-47" RenderTransformOrigin="0.5,0.5">
+                   Width="800"
+                       Margin="-240,313,890,-7" RenderTransformOrigin="0.5,0.5">
             <Image.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -173,7 +174,7 @@
             </ListView>
             <StackPanel Orientation="Horizontal">
                 
-            <StackPanel Orientation="Horizontal">
+            <StackPanel x:Name="mngS" Orientation="Horizontal">
                 <Border CornerRadius="40"
                     Width="80">
                     <Border.Background>
@@ -211,10 +212,7 @@
                             Background="Transparent"
                             BorderThickness="0" 
                             x:Name="delBtn" Click="delBtn_Click" HorizontalAlignment="Left" Width="80"/>
-                </Border>
-            </StackPanel>
-
-            <StackPanel Orientation="Horizontal" Margin="960 0 0 0">
+                </Border>  <StackPanel Orientation="Horizontal" Margin="960 0 0 0">
                 <Border CornerRadius="40"
                     Width="80">
                     <Border.Background>
@@ -235,6 +233,9 @@
                         x:Name="updateBtn" HorizontalAlignment="Left" Width="80" Click="updateBtn_Click"/>
                 </Border>
             </StackPanel>
+            </StackPanel>
+
+          
        
             </StackPanel> </StackPanel>
 
