--- a/mop/Pages/ServicesPage.xaml
+++ b/mop/Pages/ServicesPage.xaml
@@ -136,7 +136,7 @@
                     </GridView>
                 </ListView.View>
             </ListView>
-            <StackPanel Orientation="Horizontal" Height="80">
+            <StackPanel Orientation="Horizontal" Height="80" x:Name="st">
                 <Border CornerRadius="40"
          Width="80">
                     <Border.Background>
