--- a/mop/Pages/MenuFirstPage.xaml
+++ b/mop/Pages/MenuFirstPage.xaml
@@ -5,7 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:mop.Pages"
       mc:Ignorable="d" 
-      d:DesignHeight="720" d:DesignWidth="1280"
+      d:DesignHeight="900" d:DesignWidth="1450"
       Title="MenuFirstPage">
 
     <Grid Background="White">
@@ -101,12 +101,13 @@
             </Border>
 
         </StackPanel>
-        <!--<Image Source="/Images/Vector.png"
-               Width="800"
-                   Margin="1269,0,-149,306"/>
+
         <Image Source="/Images/Vector.png"
-               Width="800"
-                   Margin="-130,353,1250,-47" RenderTransformOrigin="0.5,0.5">
+                   Width="800"
+                       Margin="889,0,-239,306"/>
+        <Image Source="/Images/Vector.png"
+                   Width="800"
+                       Margin="-240,313,890,-7" RenderTransformOrigin="0.5,0.5">
             <Image.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -115,7 +116,7 @@
                     <TranslateTransform/>
                 </TransformGroup>
             </Image.RenderTransform>
-        </Image>-->
+        </Image>
 
     </Grid>
 </Page>
