--- a/mop/Pages/RequestsPage.xaml
+++ b/mop/Pages/RequestsPage.xaml
@@ -5,16 +5,16 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:mop.Pages"
       mc:Ignorable="d" 
-      d:DesignHeight="1080" d:DesignWidth="1920"
+      d:DesignHeight="900" d:DesignWidth="1450"
       Title="RequistsPage">
 
     <Grid Background="White">
         <Image Source="/Images/Vector.png"
-           Width="800"
-           Margin="1269,0,-149,306"/>
+                   Width="800"
+                       Margin="889,0,-239,306"/>
         <Image Source="/Images/Vector.png"
-           Width="800"
-           Margin="-130,353,1250,-47" RenderTransformOrigin="0.5,0.5">
+                   Width="800"
+                       Margin="-240,313,890,-7" RenderTransformOrigin="0.5,0.5">
             <Image.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -24,7 +24,6 @@
                 </TransformGroup>
             </Image.RenderTransform>
         </Image>
-
         <Button Content="← назад"
             FontSize="34"
             FontWeight="Bold"
@@ -44,8 +43,8 @@
 
         <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
             <TextBlock Text="запросы на изменение данных" 
-                   FontSize="70" 
-                   Margin="0 0 0 15"
+                   FontSize="70"  TextWrapping="Wrap"
+                   Margin="0 0 0 15" Width="700" TextAlignment="Center"
                    FontWeight="Bold"
                    HorizontalAlignment="Center">
                 <TextBlock.Foreground>
