--- a/mop/Windows/EditBrigadeWindow.xaml
+++ b/mop/Windows/EditBrigadeWindow.xaml
@@ -1,14 +1,15 @@
-﻿<Window x:Class="mop.Windows.EditBrigade"
+﻿<Window x:Class="mop.Windows.EditBrigadeWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:mop.Windows"
-        mc:Ignorable="d" WindowStartupLocation="CenterScreen"
-        Title="EditBrigade" Height="600" Width="900">
+        mc:Ignorable="d"
+            Title="EditBrigade" Height="650" Width="900">
 
     <Grid>
         <Grid.RowDefinitions>
+            <RowDefinition/>
             <RowDefinition/>
             <RowDefinition/>
             <RowDefinition/>
@@ -21,15 +22,15 @@
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
         <Image Source="/Images/Vector.png"
-           Grid.Column="2" 
-           Grid.RowSpan="4" 
-           VerticalAlignment="Top"
-           HorizontalAlignment="Right"/>
+       Grid.Column="2" 
+       Grid.RowSpan="4" 
+       VerticalAlignment="Top"
+       HorizontalAlignment="Right"/>
         <Image Source="/Images/Vector.png"
-           VerticalAlignment="Bottom"
-           HorizontalAlignment="Left"
-           RenderTransformOrigin="0.5,0.5" 
-           Grid.RowSpan="4" Grid.Row="1">
+       VerticalAlignment="Bottom"
+       HorizontalAlignment="Left"
+       RenderTransformOrigin="0.5,0.5" 
+       Grid.RowSpan="4" Grid.Row="2">
             <Image.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -40,13 +41,13 @@
             </Image.RenderTransform>
         </Image>
         <TextBlock Text="глава бригады" 
-            TextWrapping="Wrap"
-            FontSize="25" 
-            FontWeight="Bold"
-            HorizontalAlignment="Center" 
-            VerticalAlignment="Center" 
-            Grid.RowSpan="2" Grid.ColumnSpan="2" 
-            Grid.Row="3">
+        TextWrapping="Wrap"
+        FontSize="25" 
+        FontWeight="Bold"
+        HorizontalAlignment="Center" 
+        VerticalAlignment="Center" 
+        Grid.RowSpan="1" Grid.ColumnSpan="2" 
+        Grid.Row="4">
             <TextBlock.Foreground>
                 <LinearGradientBrush>
                     <GradientStop Color="#C0D5B3" Offset="0"/>
@@ -56,12 +57,12 @@
             </TextBlock.Foreground>
         </TextBlock>
         <TextBlock Text="изменить бригаду"
-               FontSize="35" TextWrapping="Wrap"
-               FontWeight="Bold" Width="400" TextAlignment="Center"
-               VerticalAlignment="Center"
-               HorizontalAlignment="Center"
-               Grid.Column="0" Grid.RowSpan="2"
-               Grid.ColumnSpan="3">
+           FontSize="35" TextWrapping="Wrap"
+           FontWeight="Bold" Width="400" TextAlignment="Center"
+           VerticalAlignment="Center"
+           HorizontalAlignment="Center"
+           Grid.Column="0" Grid.RowSpan="2"
+           Grid.ColumnSpan="3">
             <TextBlock.Foreground>
                 <LinearGradientBrush>
                     <GradientStop Color="#C0D5B3" Offset="0"/>
@@ -71,13 +72,13 @@
             </TextBlock.Foreground>
         </TextBlock>
         <ComboBox x:Name="emplCb"
-                  Width="200"
-                  Height="50" 
-                  Grid.Column="1" 
-                  Grid.ColumnSpan="2"
-                  Grid.RowSpan="2" 
-                  Grid.Row="3"
-                  ItemsSource="{Binding employees}">
+              Width="200"
+              Height="50" 
+              Grid.Column="1" 
+              Grid.ColumnSpan="2"
+              Grid.RowSpan="1" 
+              Grid.Row="4"
+              ItemsSource="{Binding employees}">
             <ComboBox.Foreground>
                 <LinearGradientBrush>
                     <GradientStop Color="#C0D5B3" Offset="0"/>
@@ -97,14 +98,14 @@
         </ComboBox>
 
         <ListView x:Name="brigadesLv"
-                  Grid.Column="0" 
-                  Width="450" Height="250"
-                  Grid.ColumnSpan="3"
-                  Grid.RowSpan="3" 
-                  Grid.Row="1"
-                  FontSize="20"
-                  ItemsSource="{Binding employees}"
-              >
+              Grid.Column="0" 
+              Width="490" Height="250"
+              Grid.ColumnSpan="3"
+              Grid.RowSpan="3" 
+              Grid.Row="1"
+              FontSize="20"
+              ItemsSource="{Binding employees}"
+          >
             <ListView.Foreground>
                 <LinearGradientBrush>
                     <GradientStop Color="#C0D5B3" Offset="0"/>
@@ -116,7 +117,7 @@
                 <GridView>
                     <GridView.Columns>
                         <GridViewColumn Header="Id бригады" 
-                                          Width="120">
+                                      Width="120">
                             <GridViewColumn.HeaderContainerStyle>
                                 <Style  TargetType="GridViewColumnHeader">
                                     <Setter Property="Foreground" Value="#B8CEC5" />
@@ -126,12 +127,12 @@
 
                             <GridViewColumn.CellTemplate>
                                 <DataTemplate>
-                                    <TextBlock Text="{Binding Brigades.ID}" Foreground="#B8CEC5"/>
+                                    <TextBlock Text="{Binding BrigadeID}" Foreground="#B8CEC5"/>
                                 </DataTemplate>
                             </GridViewColumn.CellTemplate>
                         </GridViewColumn>
                         <GridViewColumn Header="ФИО сотрудников" 
-                                          Width="260">
+                                      Width="350">
                             <GridViewColumn.HeaderContainerStyle>
                                 <Style  TargetType="GridViewColumnHeader">
                                     <Setter Property="Foreground" Value="#B8CEC5" />
@@ -155,10 +156,74 @@
                 </GridView>
             </ListView.View>
         </ListView>
+        <StackPanel x:Name="mngS" Orientation="Horizontal" 
+                    Grid.RowSpan="2" Grid.ColumnSpan="2" 
+                    Grid.Row="3"  Grid.Column="0" 
+                 HorizontalAlignment="Center"
+                   >
+            <Border CornerRadius="40"
+        Width="40" Height="40">
+                <Border.Background>
+                    <LinearGradientBrush>
+                        <GradientStop Color="#C0D5B3" Offset="0"/>
+                        <GradientStop Color="#B3C9D5" Offset="0.5"/>
+                        <GradientStop Color="#A3AEE6" Offset="1"/>
+                    </LinearGradientBrush>
+                </Border.Background>
+                <Button Content="+"
+            FontSize="25"
+            FontWeight="Bold"
+            Height="40"
+            ToolTip="добавление"
+            Foreground="White"
+            Background="Transparent"
+            BorderThickness="0" 
+            x:Name="plusBtn" HorizontalAlignment="Center" Width="40" VerticalAlignment="Top" Click="plusBtn_Click"/>
+            </Border>
+            <Border CornerRadius="40"
+        Width="40" Height="40" Margin="15 0">
+                <Border.Background>
+                    <LinearGradientBrush>
+                        <GradientStop Color="#C0D5B3" Offset="0"/>
+                        <GradientStop Color="#B3C9D5" Offset="0.5"/>
+                        <GradientStop Color="#A3AEE6" Offset="1"/>
+                    </LinearGradientBrush>
+                </Border.Background>
+                <Button Content="×"
+                FontSize="25"
+                FontWeight="Bold"
+                Height="40"
+                ToolTip="удаление"
+                Foreground="White"
+                Background="Transparent"
+                BorderThickness="0" 
+                x:Name="delBtn" Click="delBtn_Click" Width="40"/>
+            </Border>
+            <Border CornerRadius="40"
+        Width="40" Height="40" >
+                <Border.Background>
+                    <LinearGradientBrush>
+                        <GradientStop Color="#C0D5B3" Offset="0"/>
+                        <GradientStop Color="#B3C9D5" Offset="0.5"/>
+                        <GradientStop Color="#A3AEE6" Offset="1"/>
+                    </LinearGradientBrush>
+                </Border.Background>
+                <Button Content="🗘"
+                FontSize="25"
+                FontWeight="Bold"
+                Height="40"
+                ToolTip="удаление"
+                Foreground="White"
+                Background="Transparent"
+                BorderThickness="0" 
+                x:Name="udateBtn" Width="40" Click="udateBtn_Click"/>
+            </Border>
+            
+        </StackPanel>
 
         <Border CornerRadius="26" Height="35" Width="150"
-            Grid.Column="1"
-            Grid.Row="4">
+        Grid.Column="1" Grid.RowSpan="2"
+        Grid.Row="4">
             <Border.Background>
                 <LinearGradientBrush>
                     <GradientStop Color="#C0D5B3" Offset="0"/>
@@ -167,12 +232,12 @@
                 </LinearGradientBrush>
             </Border.Background>
             <Button Content="добавить"
-                FontSize="25"
-                FontWeight="Bold"
-                Foreground="White"
-                Background="Transparent"
-                BorderThickness="0" 
-                x:Name="addBtn" Click="addBtn_Click" />
+            FontSize="25"
+            FontWeight="Bold"
+            Foreground="White"
+            Background="Transparent"
+            BorderThickness="0" 
+            x:Name="addBtn" Click="addBtn_Click" />
         </Border>
 
     </Grid>
